	* Updated and standardized blist signals (Gary Kramlich)
	* More doxygen fixes (Jonathan Champ)
	* Copy/paste encoding fixes (Joe Marcus Clarke)
	* IRC disconnect crash fix (Luciano Miguel Ferreira Rocha)
	* Novell prpl works on big endian machines (Novell)
	* Zephyr works on 64 bit machines (Arun A Tharuvai)
	* Print Gadu-Gadu messages to the debug window instead of the console

	Preference Changes:
	* Added a "none" smiley theme to replace the "Show graphical
	  smileys" option
	* Removed "Show logins in window," default to yes
	* Removed "Send URLs as links," default to yes (in protocols that
	  support HTML)
	* Removed "Show URLs as links," default to yes

version 0.77 (04/22/2004):
	New Features:
	* The System Log returns (Ka-Hing Cheung)
	* Added a conversation-drag-ended signal (Etan Reisner)
	* Reorganized and cleaned up the MSN protocol plugin (Felipe Contreras)
	* Added the -c option to specify location of the .gaim directory, removed
	  the outdated -f option that no longer had any effect (Daniel Atallah)
	* Novell GroupWise protocol support added (Novell)
	* WYSIWYG improvements (Tim Ringenbach)
	* WYSIWYG editing for user info (Jon Oberheide)
	* Rich-text copy and paste
	* Plugins can now add menu items to the buddy context menu
	  (Christopher O'Brien)
	* Plugins can now add preferences (Gary Kramlich)
	* The TOC protocol is no longer built by default. The plugin is not
	  being properly tested and is no longer officially supported.
	* Bumped up the plugin API version number, and added version numbers
	  for loader plugins and protocol plugins. Authors will want to
	  update their plugins, and possibly use GAIM_PLUGIN_API_VERSION,
	  GAIM_PRPL_API_VERSION, and GAIM_LOADER_API_VERSION constants.
	* Zephyr error reporting works (Arun A. Tharuvai)
	* Zephyr deals with non-utf8 characters (Arun A. Tharuvai)

	Bug Fixes:
	* Formatting in the Log viewer is fixed (Kevin Stange)
	* Save Conversation works again (Kevin Stange)